<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CAMP</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log_acc">LogAccActivity</string>
    <string name="logAcc_button">Start Logging</string>
    <string name="title_activity_playlist_player">PlaylistPlayerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="update_context_and_position">Update Cont And Pos</string>
    <string name="get_contexts">Get contexts</string>
    <string name="createPlaylist_button">Create a Playlist</string>
    <string name="updatePlaylist_button">update a Playlist</string>
    <string name="getPlaylist_button">Get a Playlist</string>
    <string name="bluetooth_button">Discover BL</string>
    <string name="show_context">Context</string>
    <string name="title_activity_login">Login</string>

    //Font awesome
    <string name="fa_play"></string>
    <string name="fa_pause"></string>
    <string name="fa_stop"></string>
    <string name="fa_forward"></string>
    <string name="fa_backward"></string>
    <string name="fast_fast_forward"></string>
    <string name="fast_fast_backward"></string>
    <string name="fa_spotify">&#xf1bc;</string>

</resources>
