<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logAcc_button"
        android:onClick="runLogAcc"
        android:layout_gravity="center_horizontal"
        android:id="@+id/log_acc_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/gotoPlaylistBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="PLAY TEST SONG"
        android:onClick="gotoPlaylist"
        android:enabled="false"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_context_and_position"
        android:onClick="updateContextAndPosition"
        android:layout_gravity="center_horizontal"
        android:id="@+id/update_context_and_position_button"
        android:layout_below="@+id/get_contexts_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_contexts"
        android:onClick="getContexts"
        android:layout_gravity="center_horizontal"
        android:id="@+id/get_contexts_button"
        android:layout_below="@+id/log_acc_button"
        android:layout_alignStart="@+id/log_acc_button" />

    <com.cac.camp.camp.ButtonFontAwesome
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_fast_forward"
        android:id="@+id/nextbutton"
        android:onClick="next"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <com.cac.camp.camp.ButtonFontAwesome
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_fast_backward"
        android:id="@+id/previousbutton"
        android:onClick="previous"
        android:layout_gravity="left"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <com.cac.camp.camp.ButtonFontAwesome
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playbutton"
        android:text="@string/fa_play"
        android:focusable="true"
        android:enabled="true"
        android:onClick="play"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Artist"
        android:id="@+id/artistview"
        android:layout_above="@+id/previousbutton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Song"
        android:id="@+id/songview"
        android:layout_above="@+id/artistview"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />


</RelativeLayout>
