<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cac.camp.camp.PlaylistPlayerActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playlistView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:footerDividersEnabled="false"
        android:layout_below="@+id/playbutton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playbutton"
        android:text="@string/fa_play"
        android:focusable="true"
        android:enabled="true"
        android:layout_alignParentTop="true"
        android:onClick="play"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_fast_backward"
        android:id="@+id/previousbutton"
        android:layout_alignBottom="@+id/playbutton"
        android:onClick="previous"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_fast_forward"
        android:id="@+id/nextbutton"
        android:layout_alignBottom="@+id/playbutton"
        android:onClick="next"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
